@@ -1,3 +1,7 @@
+2013-01-23  Doug Evans  <dje@google.com>
+
+	* gdb.texinfo (Index Section Format): Document .gdb_index version 8.
+
 2013-01-21  Marc Khouzam  <marc.khouzam@ericsson.com>
 
 	* gdb.texinfo (GDB/MI Breakpoint Commands): Document new
